--- a/Task_Boss/client/main.html
+++ b/Task_Boss/client/main.html
@@ -13,6 +13,7 @@
     <ul class="nav navbar-nav">
       <li class="show-tasks"><a href="#">My Tasks</a></li>
       <li class="show-teams"><a href="#">Teams</a></li>
+      <li class="show-delegate"><a href="#">Delegate</a></li>
       <li style="float:right;"><a href="#">{{>loginButtons}}</a></li>
     </ul>
   </div>
@@ -23,6 +24,9 @@
    </div>
    <div class="pseudoPage teams_pseudoPage" style="display:none;">
      {{>teams_pseudoPage}}
+   </div>
+   <div class="pseudoPage delegate_pseudoPage" style="display:none;">
+     {{>delegate_pseudoPage}}
    </div>
    {{else}}
    <header>
@@ -49,7 +53,7 @@
       <span class="taskTitle">{{title}}</span>
       <button class="btn btn-success completed" type="button" style="float:right;" name="button">completed</button>
       <div id="demo_{{_id}}" class="collapse">
-         {{>task_details}}
+         {{description}}
       </div>
     </li>
     {{/each}}
@@ -64,27 +68,16 @@
       <span class="taskTitle">{{title}}</span>
       <button type="button" name="button" class="btn btn-danger js-del-task" style="float:right;">x</button>
       <div id="demo_{{_id}}" class="collapse">
-         {{>task_details}}
+         {{description}}
       </div>
     </li>
     {{/each}}
   </ul>
 </template>
 
-<template name="task_details">
-  Random details<br>
-  Random details
-</template>
 
-<template name="create_task_form">
-  <form class="">
-    <div class="form-group">
-    <label for="title">Task title:</label>
-    <input type="text" class="form-control" id="title">
-  </div>
-  <button type="submit" class="btn btn-default" >Submit</button>
-  </form>
-</template>
+
+
 
 <template name="tasks_pseudoPage">
   <div class="container">
@@ -134,8 +127,43 @@
   <div class="container">
     <ul class="list-group">
       {{#each team}}
-      <li class="list-group-item">{{name}}
-      <span style="float:right">{{_id}}</span></li>
+      <li id="{{_id}}" class="list-group-item team-handle" >
+      <button class="view-team-details btn btn-dark" style="margin-right:5px;" data-toggle="modal" data-target="#team_details_{{_id}}" type="button" name="button">view</button>
+      <span>{{name}}</span>
+      <button class="exit-team btn btn-danger" style="float:right;margin-left:5px;" type="button" name="button">exit</button>
+      <span style="float:right;color:rgba(30,30,30,0.7)">id: {{_id}}</span></li>
+      <!-- Modal -->
+    <div id="team_details_{{_id}}" class="modal fade" role="dialog">
+      <div class="modal-dialog modal-lg">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Team Details</h4>
+          </div>
+          <div class="modal-body">
+           <h3>Team name: {{name}}</h3>
+           <h4>Purpose: {{purpose}}</h4>
+           <hr>
+           <h4>Objectives:</h4>
+           <textarea name="name" rows="8" cols="80">{{objectives}}</textarea>
+           <hr>
+           <h4>Team Members: </h4>
+           <div class="row">
+             <div class="container col-md-2">
+                 {{members}}
+             </div>
+
+           </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
       {{/each}}
     </ul>
 
@@ -163,7 +191,7 @@
   <div class="form-group">
     <label for="team_purpose">Purpose of your team:</label>
     <input type="text" class="form-control" id="team_purpose">
-  </div>refreshing template.helpers on sign in
+  </div>
   <div class="form-group">
     <label for="team_objectives">Team Objectives:</label>
     <textarea id="team_objectives" rows="8" cols="60" form="create_team_form"></textarea>
@@ -207,4 +235,52 @@
 
   </div>
 </div>
+</template>
+
+<template name="delegate_pseudoPage">
+<div class="row">
+  <div class="container">
+  <button class="btn btn-dark" data-toggle="collapse" data-target="#create_task" type="button" name="button">create task</button>
+  </div>
+   <div id="create_task" class="container collapse">
+     {{>create_task_form}}
+   </div>
+</div>
+{{>teams_under_me}}
+</template>
+
+<template name="teams_under_me">
+  <div class="container">
+    <h3>Teams being led by you: </h3>
+  </div>
+  <div class="container">
+    <ul class="list-group">
+      {{#each teams}}
+      <li id={{_id}} class="list-group-item">
+      <button class="btn btn-dark" style="margin-right:5px;" data-toggle="collapse" data-target="#members_{{_id}}" type="button" name="button">members</button>
+      <span>{{name}}</span>
+      </li>
+      <div id="members_{{_id}}" class="collapse">
+        <div class="container">
+          <ul>
+            {{#each members}}
+            <li><input type="checkbox" id="{{this}}" name="member" class="assign_to">
+            <label for="{{this}}">{{this}}</label><br></li>
+            {{/each}}
+          </ul>
+        </div>
+      </div>
+      {{/each}}
+    </ul>
+  </div>
+</template>
+
+<template name="create_task_form">
+  <form class="">
+    <div class="form-group">
+    <input type="text" placeholder="title" class="form-control" id="title">
+    <textarea style="margin-top:10px;" placeholder="description" id="description" name="name" rows="8" cols="80"></textarea>
+  </div>
+  <button type="submit" class="btn btn-default" >Submit</button>
+  </form>
 </template>
