--- a/Task_Boss/client/main.html
+++ b/Task_Boss/client/main.html
@@ -3,21 +3,10 @@
 </head>
 
 <body>
+  <!--
   {{#if currentUser}}
   <header>
-    <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Task Boss</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="show-tasks"><a href="#">Tasks</a></li>
-      <li class="show-teams"><a href="#">Teams</a></li>
-      <li class="show-delegate"><a href="#">Delegate</a></li>
-      <li style="float:right;"><a href="#">{{>loginButtons}}</a></li>
-    </ul>
-  </div>
-</nav>
+    {{>loggedInNavbar}}
   </header>
    <div class="pseudoPage tasks_pseudoPage" style="display:block;">
      {{>tasks_pseudoPage}}
@@ -30,20 +19,44 @@
    </div>
    {{else}}
    <header>
-     <nav class="navbar navbar-inverse">
-   <div class="container-fluid">
-     <div class="navbar-header">
-       <a class="navbar-brand" href="#">Task Boss</a>
-     </div>
-     <ul class="nav navbar-nav">
-       <li style="float:right;"><a href="#">{{>loginButtons}}</a></li>
-     </ul>
-   </div>
- </nav>
+     {{>loggedOutNavbar}}
    </header>
 {{/if}}
+-->
 </body>
 
+
+<template name="loggedOutNavbar">
+  <nav class="navbar navbar-inverse">
+<div class="container-fluid">
+  <div class="navbar-header">
+    <a class="navbar-brand" href="#">Task Boss</a>
+  </div>
+  <ul class="nav navbar-nav">
+    <li class="show-tasks"><a href="#">Tasks</a></li>
+    <li class="show-teams"><a href="#">Teams</a></li>
+    <li class="show-delegate"><a href="#">Delegate</a></li>
+    <li style="float:right;"><a href="#">{{>loginButtons}}</a></li>
+  </ul>
+</div>
+</nav>
+</template>
+
+<template name="loggedInNavbar">
+  <nav class="navbar navbar-inverse">
+<div class="container-fluid">
+  <div class="navbar-header">
+    <a class="navbar-brand" href="#">Task Boss</a>
+  </div>
+  <ul class="nav navbar-nav">
+    <li class="show-tasks"><a href="/tasks_pseudoPage">Tasks</a></li>
+    <li class="show-teams"><a href="/teams_pseudoPage">Teams</a></li>
+    <li class="show-delegate"><a href="/delegate_pseudoPage">Delegate</a></li>
+    <li style="float:right;"><a href="#">{{>loginButtons}}</a></li>
+  </ul>
+</div>
+</nav>
+</template>
 
 <template name="incomplete_tasks">
   <ul class="list-group">
@@ -53,6 +66,7 @@
       <span class="taskTitle">{{title}}</span>
       <button class="btn btn-success completed" type="button" style="float:right;" name="button">completed</button>
       <div id="demo_{{_id}}" class="collapse">
+        <h5>Assigned by: {{assignedBy}}</h5>
         <ul>
           {{#each assignedToUsers}}
           <li>{{this}}</li>
@@ -85,29 +99,63 @@
 
 
 <template name="tasks_pseudoPage">
-  <div class="container">
-    <nav class="navbar">
+  <header>
+    <nav class="navbar navbar-inverse">
   <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Task Boss</a>
+    </div>
     <ul class="nav navbar-nav">
-      <li id="show-incomplete"><a href="#">incomplete</a></li>
-      <li id="show-complete"><a href="#">complete</a></li>
+      <li class="show-tasks active"><a href="/tasks_pseudoPage">Tasks</a></li>
+      <li class="show-teams"><a href="/teams_pseudoPage">Teams</a></li>
+      <li class="show-delegate"><a href="/delegate_pseudoPage">Delegate</a></li>
+      <li style="float:right;"><a href="#">{{>loginButtons}}</a></li>
     </ul>
   </div>
-</nav>
-  </div>
-  <div class="container">
-    <div class="col-md-12">
-      <div class="tasks incomplete_tasks" style="display:block;">
-        {{> incomplete_tasks}}
-      </div>
-      <div class="tasks complete_tasks" style="display:none;">
-        {{>complete_tasks}}
+  </nav>
+  </header>
+  <main>
+    <div class="container">
+      <nav class="navbar">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav">
+        <li id="show-incomplete"><a href="#">incomplete</a></li>
+        <li id="show-complete"><a href="#">complete</a></li>
+      </ul>
+    </div>
+  </nav>
+    </div>
+    <div class="container">
+      <div class="col-md-12">
+        <div class="tasks incomplete_tasks" style="display:block;">
+          {{> incomplete_tasks}}
+        </div>
+        <div class="tasks complete_tasks" style="display:none;">
+          {{>complete_tasks}}
+        </div>
       </div>
     </div>
-  </div>
+  </main>
+
 </template>
 
 <template name="teams_pseudoPage">
+  <header>
+    <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Task Boss</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="show-tasks"><a href="/tasks_pseudoPage">Tasks</a></li>
+      <li class="show-teams active"><a href="/teams_pseudoPage">Teams</a></li>
+      <li class="show-delegate"><a href="/delegate_pseudoPage">Delegate</a></li>
+      <li style="float:right;"><a href="#">{{>loginButtons}}</a></li>
+    </ul>
+  </div>
+  </nav>
+  </header>
+  <main>
   <div class="container">
     <nav class="navbar">
   <div class="container-fluid">
@@ -125,7 +173,7 @@
 </div>
 
      {{>teams}}
-
+</main>
 </template>
 
 <template name="teams">
@@ -243,6 +291,22 @@
 </template>
 
 <template name="delegate_pseudoPage">
+  <header>
+    <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Task Boss</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="show-tasks"><a href="/tasks_pseudoPage">Tasks</a></li>
+      <li class="show-teams"><a href="/teams_pseudoPage">Teams</a></li>
+      <li class="show-delegate active"><a href="/delegate_pseudoPage">Delegate</a></li>
+      <li style="float:right;"><a href="#">{{>loginButtons}}</a></li>
+    </ul>
+  </div>
+  </nav>
+  </header>
+  <main>
 <div class="row">
   <div class="container">
   <button class="btn btn-dark" data-toggle="collapse" data-target="#create_task" type="button" name="button">create task</button>
@@ -252,6 +316,7 @@
    </div>
 </div>
 {{>teams_under_me}}
+</main>
 </template>
 
 <template name="teams_under_me">
