--- a/Task_Boss/client/main.html
+++ b/Task_Boss/client/main.html
@@ -14,11 +14,12 @@
         <a class="navbar-brand" href="#">TaskBoss</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/teams">Teams</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li id="js-logout">
-          <a href=""><span style="margin-right:5px;" class="glyphicon glyphicon-log-out"></span>logout</a>
+        <li id="js_logout">
+          <a href="#"><span style="margin-right:5px;" class="glyphicon glyphicon-log-out"></span>logout</a>
         </li>
       </ul>
     </div>
@@ -117,6 +118,97 @@
   </div>
 
 </template>
-<!--template dashboard-->
-<template name="dashboard"></template>
+<!--template teams-->
+<template name="teams">
+  {{>logged_in_navbar}}
+  <div class="container">
+    <div class="row">
+      <button class="btn btn-dark btn-lg js-create-team" data-toggle="modal" 
+        data-target="#create_team">
+        Create team</button>
+      <button class="btn btn-dark btn-lg js-join-team" data-toggle="modal"
+        data-target="#join_team">
+        Join team</button>
+    </div>
+    {{>create_team_modal}}
+    {{>join_team_modal}}
+    <div class="row" style="margin-top:30px;">
+      <div class="container teams_list">
+        <h2>Teams:</h2>
+        <ul class="list-group">
+          {{#each teams}}
+          <li class="list-group-item">{{name}}</li>
+          {{/each}}
+        </ul>
+      </div>
+    </div>
+  </div>
+</template>
+<!--template create_team_modal -->
+<template name="create_team_modal">
+  <!-- Modal -->
+<div id="create_team" class="modal fade" role="dialog">
+  <div class="modal-dialog">
 
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Enter Team Details</h4>
+      </div>
+      <div class="modal-body">
+
+          <form >
+            <div class="form-group">
+    <label for="team_name">Team name:</label>
+    <input type="text" class="form-control" name="team_name" id="team_name">
+  </div>
+  <div class="form-group">
+    <label for="team_purpose">Team description:</label>
+    <input type="text" class="form-control" name="team_purpose" id="team_purpose">
+  </div>
+  <div class="form-group">
+    <label for="team_objectives">Team Objectives:</label>
+    <textarea name="team_objectives" id="team_objectives" rows="8" cols="60" ></textarea>
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+</template>
+<!--template join_team_modal -->
+<template name="join_team_modal">
+<!-- Modal -->
+<div id="join_team" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Join A Team</h4>
+      </div>
+      <div class="modal-body">
+        <form class="join_team_form">
+          <div class="form-group">
+            <label for="team_id">Enter the team id:</label>
+            <input type="text" class="form-control" id="team_id">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+</template>
