--- a/Task_Boss/client/main.html
+++ b/Task_Boss/client/main.html
@@ -19,7 +19,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li id="js_logout">
-          <a href="#"><span style="margin-right:5px;" class="glyphicon glyphicon-log-out"></span>logout</a>
+          <a href="/"><span style="margin-right:5px;" class="glyphicon glyphicon-log-out"></span>logout</a>
         </li>
       </ul>
     </div>
