--- a/Task_Boss/client/main.html
+++ b/Task_Boss/client/main.html
@@ -137,7 +137,7 @@
         <h2>Teams:</h2>
         <ul class="list-group">
           {{#each teams}}
-          <li class="list-group-item">{{name}}</li>
+          <li class="list-group-item">{{name}}<span style="float:right">{{_id}}</span></li>
           {{/each}}
         </ul>
       </div>
@@ -199,7 +199,7 @@
         <form class="join_team_form">
           <div class="form-group">
             <label for="team_id">Enter the team id:</label>
-            <input type="text" class="form-control" id="team_id">
+            <input type="text" class="form-control" name="team_id" id="team_id">
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
