--- a/Task_Boss/client/main.html
+++ b/Task_Boss/client/main.html
@@ -217,7 +217,7 @@
               class="glyphicon glyphicon-list" data-toggle="collapse" 
              data-target="#team_details_{{_id}}"></span>
             {{name}}
-            <span style="float:right;margin-left:20px;" class="js-exit-team glyphicon glyphicon-remove"></span>
+            <span style="float:right;margin-left:20px;" class="js-del-team glyphicon glyphicon-remove"></span>
             <span style="float:right">{{_id}}</span>
             <div id="team_details_{{_id}}" class="collapse">
               <div class="row">
